--- a/src/buy.jade
+++ b/src/buy.jade
@@ -4,133 +4,41 @@ html(lang="ru")
         link(href="/css/main.css" rel="stylesheet" type="text/css")
         link(href="bower_components/normalize-css/normalize.css" rel="stylesheet" type="text/css")
         link(href="/css/owl.carousel.css" rel="stylesheet" type="text/css")
+        link(href="/css/template.css" rel="stylesheet" type="text/css")
         script(src="bower_components/jquery/dist/jquery.js")
         script(src="/js/owl.carousel.js")
         script(src="/js/untils.js")
 
 
     body
-        header
+        .page_wrapper
+            include ./header.jade
 
-            .wrap
-                .logo
-                    a(href="/")
-                        img(src="img/icons/logo.png")
+            div.container
+                .wrap
 
-                ul.social
-                    li.vk
-                        a(href="#")
-                    li.facebook
-                        a(href="#")
-                    li.twitter
-                        a(href="#")
-                ul.lang
-                    li.ua
-                        a(href="#") ua
-                    li.ru.active
-                        a(href="#") ru
-                    li.en
-                        a(href="#") en
+                    .article
+                        h1 Где купить
 
-
-                div.cart
-                    a(href='#') 1
-
-
-                .menu
-                    ul
-                        li.active
-                            a(href="#") Главная
-                        li
-                            a(href="#") Купить онлайн
-                        li
-                            a(href="#") Где купить
-                        li
-                            a(href="#") О нас
-                        li
-                            a(href="#") FAQ
-                        li
-                            a(href="#") Блог
-                        li
-                            a(href="#") Контакты
-
-
-
-
-        div.container
-            .wrap
-
-                .article
-                    h1 Где купить
-
-                    ul.buy.cf
-                        li
-                            strong Адрес 1
-                            p Украина, Черкассы <br/> Ул. Ильина 200/1 <br/>+38 (093) 256 38 52
-                        li
-                            strong График работы:
-                            p с 8:00 до 20:00
-                                span В субботу: с 9:00 до 19:00
-                                span В воскресенье: с 9:00 до 19:00
-                        li
-                            strong Адрес 2
-                            p Украина, Черкассы <br/>Ул. Ильина 200/1 <br/>+38 (093) 256 38 52
-                        li
-                            strong График работы:
-                            p с 8:00 до 20:00
-                                span В субботу: с 9:00 до 19:00
-                                span В воскресенье: с 9:00 до 19:00
-
-
-
-
-footer
-            .wrap
-                div
-                    div.call_us
-                        h3 Позвонить нам
-                        ul
+                        ul.buy.cf
                             li
-                                a(href="+380935263954") +38 (093) 52 63 954
+                                strong Адрес 1
+                                p Украина, Черкассы <br/> Ул. Ильина 200/1 <br/>+38 (093) 256 38 52
                             li
-                                a(href="+380935263954") +38 (093) 52 63 954
-
-
-                    .social
-                        h3 Социальные сети
-                        li.vk
-                            a(href="#")
-                        li.facebook
-                            a(href="#")
-                        li.twitter
-                            a(href="#")
-
-                div.adress
-                    h3 Где мы находимся
-                    ul
-                        li г. Черкассы, ул. Ильина 1, 2 этаж “ Кооператор”
-                        li г. Черкассы, ул. Ильина 1, 2 этаж “ Кооператор”
+                                strong График работы:
+                                p с 8:00 до 20:00
+                                    span В субботу: с 9:00 до 19:00
+                                    span В воскресенье: с 9:00 до 19:00
+                            li
+                                strong Адрес 2
+                                p Украина, Черкассы <br/>Ул. Ильина 200/1 <br/>+38 (093) 256 38 52
+                            li
+                                strong График работы:
+                                p с 8:00 до 20:00
+                                    span В субботу: с 9:00 до 19:00
+                                    span В воскресенье: с 9:00 до 19:00
 
 
 
-                div
-                    div.subscription
-                        h3 Подписаться на новости
-                        form
-                            input(type='text' placeholder='mail:')
 
-                    div.payment
-                        h3 Способы оплаты
-                        ul
-                            li.payment1
-                                a(href="#")
-                            li.privat
-                                a(href="#")
-                            li.visa
-                                a(href="#")
-                            li.paypal
-                                a(href="#")
-
-
-
-                p.copyright © 2016 Symonen.ko
+            include ./footer.jade
