--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -48,7 +48,7 @@ img
   width: 940px
   margin: auto
 header
-  background:  #1a1a1a
+
   padding-top: 50px
   padding-bottom: 60px
 
@@ -68,21 +68,37 @@ header
         display: inline-block
         width: 24px
         height: 23px
-        background: url("../img/icons/social.png") no-repeat
         margin-right: 45px
+        a
+            background: url("../img/icons/social.png") no-repeat
+            -webkit-transition: all 0.35s
+            -moz-transition: all 0.35s
+            -o-transition: all 0.35s
+            transition: all 0.35s
+            display: block
+            width: 24px
+            height: 23px
+            &:hover
+              background: url("../img/icons/social_hover.png") no-repeat
+              -webkit-transition: all 0.35s
+              -moz-transition: all 0.35s
+              -o-transition: all 0.35s
+              transition: all 0.35s
         &.facebook
-          background-position: -51px 0
+          a
+            background-position: -51px 0
+            &:hover
+              background-position: -51px 0
         &.twitter
-          background-position: top right
           width: 23px
           a
+            background-position: top right
             width: 23px
+            &:hover
+              background-position: top right
         &:last-child
           margin-right: 0
-        a
-          display: block
-          width: 24px
-          height: 23px
+
 
   .lang
       display: inline-block
@@ -167,7 +183,7 @@ header
 
 
 footer
-  background: #1a1a1a
+  background: url("../img/bg/bg_footer.jpg") repeat-x
   padding-top: 65px
   padding-bottom: 20px
   color: #fff
@@ -206,26 +222,42 @@ footer
         display: inline-block
         vertical-align: middle
         margin-bottom: 30px
-
         li
           display: inline-block
           width: 24px
           height: 23px
-          background: url("../img/icons/social.png") no-repeat
           margin-right: 20px
-          &.facebook
-            background-position: -51px 0
-          &.twitter
-            background-position: top right
-            width: 23px
-            a
-              width: 23px
-          &:last-child
-            margin-right: 0
           a
+            background: url("../img/icons/social.png") no-repeat
+            -webkit-transition: all 0.35s
+            -moz-transition: all 0.35s
+            -o-transition: all 0.35s
+            transition: all 0.35s
             display: block
             width: 24px
             height: 23px
+            &:hover
+              background: url("../img/icons/social_hover.png") no-repeat
+              -webkit-transition: all 0.35s
+              -moz-transition: all 0.35s
+              -o-transition: all 0.35s
+              transition: all 0.35s
+          &.facebook
+            a
+              background-position: -51px 0
+              &:hover
+                background-position: -51px 0
+          &.twitter
+            width: 23px
+            a
+              background-position: top right
+              width: 23px
+              &:hover
+                background-position: top right
+          &:last-child
+            margin-right: 0
+
+
     .adress
         width: 235px
         margin: auto 165px
@@ -263,27 +295,50 @@ footer
           width: 28px
           display: inline-block
           vertical-align: middle
-          background: url("../img/icons/master_card.png") no-repeat
+
           margin-right: 24px
           a
             display: block
             height: 17px
             color: #FFFFFF
+            background: url("../img/icons/master_card.png") no-repeat
+            -webkit-transition: all 0.35s
+            -moz-transition: all 0.35s
+            -o-transition: all 0.35s
+            transition: all 0.35s
+            &:hover
+              background: url("../img/icons/master_card_hover.png") no-repeat
+              -webkit-transition: all 0.35s
+              -moz-transition: all 0.35s
+              -o-transition: all 0.35s
+              transition: all 0.35s
 
 
 
           &.privat
-            background-position: -55px 0
+
             width: 15px
+            a
+              background-position: -55px 0
+              &:hover
+                background-position: -55px 0
 
           &.visa
             background-position: -100px 0
             width: 35px
+            a
+              background-position: -100px 0
+              &:hover
+                background-position: -100px 0
 
           &.paypal
-            background-position: top right
+
             width: 58px
             margin-right: 0
+            a
+              background-position: top right
+              &:hover
+                background-position: top right
 
 
   .copyright
@@ -367,10 +422,15 @@ footer
   position: relative
   
   
-body
+.page_wrapper
+  header
+    background: url("../img/bg/bg_header.jpg") repeat-x
+    -webkit-box-sizing: border-box
+    -moz-box-sizing: border-box
+    box-sizing: border-box
   &.home
     header
-      padding-bottom: 415px
+      height: 600px
 
 
     .container
@@ -383,7 +443,7 @@ body
       padding-top: 210px
   &.shop
     header
-      padding-bottom: 415px
+      height: 600px
 
     .container
       top: -350px
@@ -452,8 +512,8 @@ body
 
         &:hover
           text-decoration: none
-          /*.product_name
-            color: #ffe400*/
+          .product_name
+            color: #ffe400
 
           .images
             &:before
@@ -500,6 +560,10 @@ body
     vertical-align: top
     margin: 0 16px 20px 0
     width: 300px
+    height: 350px
+    overflow: hidden
+
+
     &:nth-child(3n)
       margin-right: 0
     a
@@ -552,6 +616,9 @@ body
         white-space: nowrap
         text-overflow: ellipsis
         overflow: hidden
+        opacity: 1
+        transform: translateY(0px)
+        transition: all .3s ease-out
 
 
 
@@ -562,15 +629,27 @@ body
       &:hover
         text-decoration: none
         .category_name
-          display: none
+          opacity: 0
+          transform: translateY(30px)
+          transition: all .3s ease-out
         .images
           &:before
             opacity: 1
             transition: all .3s
+            -webkit-transition-delay: 0.3s
+            -o-transition-delay: 0.3s
+            -moz-transition-delay: 0.3s
+            transition-delay: 0.3s
           &:after
             opacity: 1
             transform: translateY(0px)
             transition: all .3s ease-out
+
+            -webkit-transition-delay: 0.3s
+            -o-transition-delay: 0.3s
+            -moz-transition-delay: 0.3s
+            transition-delay: 0.3s
+
 
 
 
@@ -684,8 +763,7 @@ body
       margin-bottom: 20px
     input[type="submit"]
         margin: auto
-        width: 123px
-        height: 43px
+        padding: 9px 20px 14px
         border: 1px solid #000000
         background: none
         display: block
@@ -693,7 +771,7 @@ body
         -webkit-box-sizing: border-box
         -moz-box-sizing: border-box
         box-sizing: border-box
-        line-height: 41px
+        line-height: 1em
         -webkit-transition: all 0.35s
         -moz-transition: all 0.35s
         -o-transition: all 0.35s
@@ -738,8 +816,7 @@ form.payment
 
   input[type="submit"]
     margin: auto
-    width: 123px
-    height: 43px
+    padding: 9px 20px 14px
     border: 1px solid #000000
     background: none
     display: block
@@ -747,7 +824,7 @@ form.payment
     -webkit-box-sizing: border-box
     -moz-box-sizing: border-box
     box-sizing: border-box
-    line-height: 41px
+    line-height: 1em
     -webkit-transition: all 0.35s
     -moz-transition: all 0.35s
     -o-transition: all 0.35s
@@ -785,7 +862,6 @@ form.payment
       label
         cursor: pointer
         padding-left: 40px
-        background: url("../img/icons/radio.png") no-repeat bottom left
         line-height: 25px
         height: 25px
         color:  #000000
@@ -807,9 +883,17 @@ form.payment
     display: inline-block
     margin-right: 75px
     vertical-align: top
-    img
-      width: 400px
-      height: 350px
+    width: 400px
+    .big-images
+      img
+        width: 400px
+        height: 350px
+
+    .thumbs
+      .owl-item
+        width: 140px
+        height: 75px
+        margin-right: 18px
 
 
 
@@ -852,18 +936,26 @@ form.payment
           position: relative
           padding-bottom: 40px
           margin-bottom: 25px
+          .attr_name
+            line-height: 1em
+            display: inline-block
+            vertical-align: middle
+            margin-right: 10px
+            color: #000000
+            font-size: 18px
+
+
+
+
           >div
             display: inline-block
             vertical-align: middle
 
-            &.active
-              label
-                border-color: #ffe400
 
             label
               cursor: pointer
               display: block
-              margin: 0 10px
+              margin: 0 6px
               padding: 2px
               border: 2px solid rgba(255, 228, 0, 0)
               width: 20px
@@ -878,24 +970,24 @@ form.payment
               left: -100000px
               &:checked ~ .price
                 display: inline-block
+              &:checked ~ label
+                border-color: #ffe400
             .price
                 position: absolute
                 bottom: 0
                 display: none
                 left: 0
         button
-              padding: 0
+              padding: 9px 30px 14px
               margin-bottom: 40px
-              width: 178px
-              height: 43px
               border: 1px solid #000000
               background: none
               display: block
               font-size: 18px
-              -webkit-box-sizing: border-box
+              -webkit-buyizing: border-box
               -moz-box-sizing: border-box
               box-sizing: border-box
-              line-height: 41px
+              line-height: 1em
               -webkit-transition: all 0.35s
               -moz-transition: all 0.35s
               -o-transition: all 0.35s
@@ -907,17 +999,5 @@ form.payment
                 -moz-transition: all 0.35s
                 -o-transition: all 0.35s
                 transition: all 0.35s
-    .related
-      li
-        display: inline-block
-        vertical-align: top
-        width: 140px
-        height: 75px
-        margin-right: 18px
-        margin-bottom: 20px
-        &:last-child,&:nth-child(3n)
-          margin-right: 0
-
-
 
 
