--- a/src/payment.jade
+++ b/src/payment.jade
@@ -4,107 +4,64 @@ html(lang="ru")
         link(href="/css/main.css" rel="stylesheet" type="text/css")
         link(href="bower_components/normalize-css/normalize.css" rel="stylesheet" type="text/css")
         link(href="/css/owl.carousel.css" rel="stylesheet" type="text/css")
+        link(href="/css/template.css" rel="stylesheet" type="text/css")
         script(src="bower_components/jquery/dist/jquery.js")
         script(src="/js/owl.carousel.js")
         script(src="/js/untils.js")
 
 
     body
-        header
+        .page_wrapper
+            include ./header.jade
 
-            .wrap
-                .logo
-                    a(href="/")
-                        img(src="img/icons/logo.png")
+            div.container
+                .wrap
 
-                ul.social
-                    li.vk
-                        a(href="#")
-                    li.facebook
-                        a(href="#")
-                    li.twitter
-                        a(href="#")
-                ul.lang
-                    li.ua
-                        a(href="#") ua
-                    li.ru.active
-                        a(href="#") ru
-                    li.en
-                        a(href="#") en
+                    form.payment
+                        h3 Оплата
 
+                        .radio.cf
 
-                div.cart
-                    a(href='#') 1
+                            div
+                                input(type="radio", name="payment", value="visa", id="visa",checked="")
+                                label(for="visa") VISA
+                            div
+                                input(type="radio", name="payment", value="privat24",id="privat24")
+                                label(for="privat24") Privat24
+                            div
+                                input(type="radio", name="payment", value="mastercard" id="mastercard")
+                                label(for="mastercard") Mastercard
+
+                            div
+                                input(type="radio", name="payment", value="paypal", id="paypal")
+                                label(for="paypal") PayPal
 
 
-                .menu
-                    ul
-                        li.active
-                            a(href="#") Главная
-                        li
-                            a(href="#") Купить онлайн
-                        li
-                            a(href="#") Где купить
-                        li
-                            a(href="#") О нас
-                        li
-                            a(href="#") FAQ
-                        li
-                            a(href="#") Блог
-                        li
-                            a(href="#") Контакты
+                            div
+                                input(type="radio", name="payment", value="novaposhta", id="novaposhta")
+                                label(for="novaposhta") Наложный платеж “Новая почта”
 
 
 
+                        h3 Доставка
+                        .radio.cf
+                            div
+                                input(type="radio", name="delivery", value="courier", id="courier", checked="")
+                                label(for="courier") Курьером по г. Черкассы
 
-        div.container
-            .wrap
-
-                form.payment
-                    h3 Оплата
-
-                    .radio.cf
-
-                        div
-                            input(type="radio", name="payment", value="visa", id="visa",checked="")
-                            label(for="visa") VISA
-                        div
-                            input(type="radio", name="payment", value="privat24",id="privat24")
-                            label(for="privat24") Privat24
-                        div
-                            input(type="radio", name="payment", value="mastercard" id="mastercard")
-                            label(for="mastercard") Mastercard
-
-                        div
-                            input(type="radio", name="payment", value="paypal", id="paypal")
-                            label(for="paypal") PayPal
+                            div
+                                input(type="radio", name="delivery", value="novaposhta2" id="novaposhta2")
+                                label(for="novaposhta2")  Новая почта (наложный платеж)
 
 
-                        div
-                            input(type="radio", name="payment", value="novaposhta", id="novaposhta")
-                            label(for="novaposhta") Наложный платеж “Новая почта”
-
-
-
-                    h3 Доставка
-                    .radio.cf
-                        div
-                            input(type="radio", name="delivery", value="courier", id="courier", checked="")
-                            label(for="courier") Курьером по г. Черкассы
-
-                        div
-                            input(type="radio", name="delivery", value="novaposhta2" id="novaposhta2")
-                            label(for="novaposhta2")  Новая почта (наложный платеж)
-
-
-                    h3 Контактная информация
-                    input(type="text", placeholder="Имя:")
-                    input(type="text", placeholder="Фамилия:")
-                    input(type="text", placeholder="Страна:")
-                    input(type="text", placeholder="Город:")
-                    input(type="text", placeholder="Улица:")
-                    input(type="text", placeholder="Email:")
-                    input(type="submit", name="Отправить")
+                        h3 Контактная информация
+                        input(type="text", placeholder="Имя:")
+                        input(type="text", placeholder="Фамилия:")
+                        input(type="text", placeholder="Страна:")
+                        input(type="text", placeholder="Город:")
+                        input(type="text", placeholder="Улица:")
+                        input(type="text", placeholder="Email:")
+                        input(type="submit", name="Отправить")
 
 
 
@@ -112,53 +69,4 @@ html(lang="ru")
 
 
 
-footer
-            .wrap
-                div
-                    div.call_us
-                        h3 Позвонить нам
-                        ul
-                            li
-                                a(href="+380935263954") +38 (093) 52 63 954
-                            li
-                                a(href="+380935263954") +38 (093) 52 63 954
-
-
-                    .social
-                        h3 Социальные сети
-                        li.vk
-                            a(href="#")
-                        li.facebook
-                            a(href="#")
-                        li.twitter
-                            a(href="#")
-
-                div.adress
-                    h3 Где мы находимся
-                    ul
-                        li г. Черкассы, ул. Ильина 1, 2 этаж “ Кооператор”
-                        li г. Черкассы, ул. Ильина 1, 2 этаж “ Кооператор”
-
-
-
-                div
-                    div.subscription
-                        h3 Подписаться на новости
-                        form
-                            input(type='text' placeholder='mail:')
-
-                    div.payment
-                        h3 Способы оплаты
-                        ul
-                            li.payment1
-                                a(href="#")
-                            li.privat
-                                a(href="#")
-                            li.visa
-                                a(href="#")
-                            li.paypal
-                                a(href="#")
-
-
-
-                p.copyright © 2016 Symonen.ko
+            include ./footer.jade
