--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -152,7 +152,7 @@ header
 
   .menu
       margin-top: 50px
-      ul
+
 
 
       li
@@ -161,7 +161,7 @@ header
         display: inline-block
         margin-right: 78px
         &:last-child
-          margin-right: 0px
+          margin-right: 0
           text-align: left
         &.active
           a
@@ -986,7 +986,7 @@ form.payment
               background: none
               display: block
               font-size: 18px
-              -webkit-buyizing: border-box
+              -webkit-box-sizing: border-box
               -moz-box-sizing: border-box
               box-sizing: border-box
               line-height: 1em
